# phrase-gen

./: .envrc  .gitignore  .gitmodules  .pre-commit-config.yaml  .pydocstyle.ini  DEVELOPMENT.md  Makefile  README.md  mypy.ini  pyproject.toml  pyrightconfig.json  ruff.toml
src/phrasegen/: __init__.py  cli.py  main.py  utils.py
test/: test_main.py
